May 17, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- abort configure if gdk-pixbuf is not installed
- adapt spec file

May 07, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- Pass RCON password on command line when launching Half-Life. Thanks Andreas
  Schneider for reporting.

May 02, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- update German translation
- remove custom args for Rocket Arena as 1.6 does not need them anymore
- display number of private clients in player column (initial idea from Michael
  Prager) 
- coresize option in config file because I always remember that I wanted to
  change the ulimit when xqf had already crashed ;-)

Apr 29, 2003: Jordi Mallach <jordi@sindominio.net>
- update Catalan and Spanish translations

Apr 27, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- fix keyboard focus in server list
- don't allow double click on map column if game supports map preview,
  otherwise mouse would be grabbed and not available in other windows

Apr 26, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- Display team of player for wolf and et

Apr 25, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- Icon for Enemy Territory
- Config option for Master server

Apr 24, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- cleanups, fixed some warnings, changed debug macros
- initial Enemy Territory Support (Testversion)
- increased version number

Apr 22, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- don't display warnings about NULL if scanning for maps is disabled. Thanks
  Jochen Baier for reporting.

Mar 24, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- popup window with levelshot when clicking on map column, currently supports
  jpg shots inside pk3 files for q3 and wolf.

Mar 15, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- added Serious Sam: The Second Encounter

Mar 10, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- store all map names lowercase, otherwise many maps are reported as
  not installed